# secureboot4Manjaro

./: .gitignore  README.md  enroll-keys.sh  fix-boot-chain.sh  fix-grub-direct.sh  fix-grub-shimlock.sh  fix-grub-verifier.sh  pyproject.toml  recover-grub.sh  requirements.txt  run.py  sbctl-setup.sh  setup.sh  sign-grub.sh  sign-remaining.sh
src/myproject/: __init__.py  kernel_builder.py  secureboot.py
tests/: test_secureboot.py
